more advanced and updated Featured Flappy Avatars